--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,3 @@
-= XYZ Reader Starter Code
+= XYZ Reader | Material LIFE
 
-This repository stores the starter code for the XYZ Reader project in Udacity's Android Nanodegree.
+This repository stores material design training project for the XYZ Reader project in Udacity's Android Nanodegree.
